Add release notes on prismatic joint support

--- a/doc/releases/v0_8.md
+++ b/doc/releases/v0_8.md
@@ -10,6 +10,7 @@ This is the first version of iDynTree for which a changelog was introduced.
 
 Important Changes
 -----------------
+* The iDynTree::Model class now supports prismatic joints, using the iDynTree::PrismaticJoint class. Support for prismatic joints was added also to the URDF parser ( https://github.com/robotology/idyntree/pull/269 ). 
 
 ### Dependencies
 
