Various documentation fixes

--- a/doc/releases/v0_8.md
+++ b/doc/releases/v0_8.md
@@ -1,4 +1,4 @@
-iDynTree 0.8 (2017-06-15)                                              {#v0_8}
+iDynTree 0.8 (2017-09-25)                                              {#v0_8}
 ========================
 
 [TOC]
@@ -13,6 +13,8 @@ Important Changes
 * The iDynTree::Model class now supports prismatic joints, using the iDynTree::PrismaticJoint class. Support for prismatic joints was added also to the URDF parser ( https://github.com/robotology/idyntree/pull/269 ). 
 
 * The methods and constructors of the iDynTree::RevoluteJoint and iDynTreee::PrismaticJoint classes handling joints have been cleaned up ( https://github.com/robotology/idyntree/pull/339 ).
+
+* Classes and function to convert between chains rappresented by the Denavit Hartnberg convention and iDynTree::Model object have been implemented ( https://github.com/robotology/idyntree/pull/350 ).
 
 ### Dependencies
 
