--- a/doc/main.dox
+++ b/doc/main.dox
@@ -39,7 +39,6 @@
  *
  */
 
-
 /**
  * \defgroup iDynTreeEstimation Algorithms related to whole-body estimation.
  */
@@ -53,8 +52,19 @@
  */
 
 /**
- * \defgroup iDynTreeKDL Functions and classes for simplifying integration of %iDynTree and KDL.
+ * \defgroup iDynTreeExperimental Experimental classes, for which the interface is currently under active development and is not stable.
+ *
+ * The classes and function contained in this group are in active development and are expected to change between different iDynTree
+ * releases without any support for backward compatibility.
  */
+
+/**
+ * \defgroup iDynTreeInverseKinematics Inverse kinematics algorithms.
+ *
+ * \warning This component is compiled only if iDynTree is compiled with the CMake flag
+ *          IDYNTREE_USES_IPOPT set to ON .
+ */
+
 
 /**
  * \defgroup iDynTreeYARP Functions and classes for simplifying integration of %iDynTree and YARP.
@@ -62,56 +72,15 @@
  * \warning This component is compiled only if iDynTree was compiled with the CMake flag
  *          IDYNTREE_USES_YARP set to ON .
  *
- * \note <b>SI units adopted</b>: meters for lengths and radiants
- *       for angles.
- *
- * \section dep_sec Dependencies
- * - KDL
- *
- * \section intro_sec Description
- *
- * iDynTree is designed to be an efficient, generic and easy to use library
- * to calculate joint torques and external wrenches given kinetic information
- * (linear acceleration, angular velocity and  angular acceleration of a link,
- * joint positions, velocities, acceleration) and embedded FT sensor measures,
- * implementing the techniques described in this two papers:
- *
- *     - [1] S. Ivaldi, M. Fumagalli, M. Randazzo, F. Nori, G. Metta, and G. Sandini
- *           Computing robot internal/external wrenches by means of inertial, tactile and f/t sensors: theory and implementation on the icub
- *           in Proc. of the 11th IEEE-RAS International Conference on Humanoid Robots, Bled, Slovenia, 2011.
- *           http://people.liralab.it/iron/Papers/conference/780_Ivaldi_etal2011.pdf
- *           http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6100813
- *
- *     - [2] A. Del Prete, L. Natale, F. Nori, and G. Metta,
- *           Contact Force Estimations Using Tactile Sensors and Force / Torque Sensors
- *           in Human Robot Interaction, 2012, pp. 0–2,
- *           http://pasa.liralab.it/pasapdf/1113_DelPrete_etal2012.pdf
- *
- * Additional details (some not implemented, like multiple IMUs):
- *
- *     - [3] M. Fumagalli, S. Ivaldi, M. Randazzo, L. Natale, G. Metta, G. Sandini, and F. Nori,
- *           Force feedback exploiting tactile and proximal force/torque sensing
- *           in Autonomous Robots, vol. 33, no. 4, pp. 381–398, 2012.
- *           http://dx.doi.org/10.1007/s10514-012-9291-2
- *           http://people.liralab.it/iron/Papers/journal/IvaldiFumagallietAl.pdf
- *
- * \section tested_os_sec Tested OS
- *
- * Linux
- *
- * \section example_sec Example
- *
- * Exe
- *
- *
- * \author Silvio Traversaro
- *
- * Copyright (C) 2013 RobotCub Consortium
- * CopyPolicy: Released under the terms of the GNU LGPL v2.0.
- *
- *
- **/
+ */
 
+/**
+ * \defgroup iDynTreeICUB Functions and classes for simplifying integration of %iDynTree and ICUB.
+ *
+ * \warning This component is compiled only if iDynTree was compiled with the CMake flag
+ *          IDYNTREE_USES_ICUB set to ON .
+ *
+ */
 
 
 
@@ -143,9 +112,14 @@ contained in iDynTree .
 \li  \ref iDynTreeEstimation "Estimation" : Algorithms related to whole-body estimation.
 \li  \ref iDynTreeRegressors "Regressors" : Algorithms related to whole-body dynamics identification.
 \li  \ref iDynTreeHighLevel "HighLevel"   : High level interfaces to access algorithms contained in %iDynTree.
-\li  \ref iDynTreeKDL "KDL" : Function and classes for simplifying integration of %iDynTree with [KDL](https://github.com/orocos/orocos_kinematics_dynamics).
 \li  \ref iDynTreeYARP "YARP" : Function and classes for simplifying integration of %iDynTree with [YARP](http://yarp.it/).
 <br>
+
+As iDynTree is mainly developed to support the research effort of [iCub Facility department](https://www.iit.it/research/lines/icub) of the [Italian Institute of Technology](https://www.iit.it),
+some parts of it are activly developed and their interface can abroutly change between iDynTree releases.
+Until this components are ready to be integrated in a proper part of iDynTree, we keep them in the "experimental" part of iDynTree :
+
+\li  \ref iDynTreeExperimental "Experimental" : Experimental data structures and algorithms, whose interface is not guaranteed to be stable.
 
  *
  */
