--- a/doc/releases/v0_8_1.md
+++ b/doc/releases/v0_8_1.md
@@ -12,3 +12,5 @@ Bug Fixes
 While this is technically an API change, it was critical because most of the other `toEigen` methods return an `Eigen::Map` object, and users 
 expect to be able to use `Eigen` modifiers methods such as `toEigen(...).setZero()`. Enforcing a compilation error in this case will help to prevent subtle bugs.
 As this is an `inline` function, this modification does not affect `iDynTree`'s `ABI` ( https://github.com/robotology/idyntree/pull/378 ) .
+
+* The CMake configuration files of the release `0.8.0` were generated with the wrong version `0.7.2`. 
