Update release notes

--- a/doc/releases/v0_8_1.md
+++ b/doc/releases/v0_8_1.md
@@ -1,4 +1,4 @@
-iDynTree 0.8.1 (UNRELEASED)                                              {#v0_8_1}
+iDynTree 0.8.1 (2017-09-29)                                              {#v0_8_1}
 ========================
 
 [TOC]
