Update ChangeLog and version

--- a/doc/releases/v0_10.md
+++ b/doc/releases/v0_10.md
@@ -9,3 +9,7 @@ iDynTree 0.10 Release Notes
 
 Important Changes
 -----------------
+
+#### `inverse-kinematics`
+
+* Frame Constraints can now be enabled and disabled dynamically ( https://github.com/robotology/idyntree/pull/389 ).
