[contact switching] bugfix and changelog update

--- a/doc/releases/v0_10.md
+++ b/doc/releases/v0_10.md
@@ -13,3 +13,7 @@ Important Changes
 #### `inverse-kinematics`
 
 * Frame Constraints can now be enabled and disabled dynamically ( https://github.com/robotology/idyntree/pull/389 ).
+
+#### `estimation`
+* Addition of iDynTree::SchmittTrigger, iDynTree::ContactStateMachine and iDynTree::BipedFootContactClassifier classes for performing contact state detection using Schmitt trigger based thresholding and biped foot contact classification based on an alternate contact switching pattern reasoning over contact makes used for getting primary foot in contact
+  (https://github.com/robotology/idyntree/pull/410 ,   https://github.com/robotology/idyntree/pull/411 ).
