--- a/doc/releases/v0_10.md
+++ b/doc/releases/v0_10.md
@@ -10,6 +10,14 @@ iDynTree 0.10 Release Notes
 Important Changes
 -----------------
 
+#### `core`
+* Added the `iDynTree::Span` class (https://github.com/robotology/idyntree/pull/434), modeled after
+  the C++20's `std::span` ( http://en.cppreference.com/w/cpp/container/span ). This class can be used to write
+  methods and functions that access a contiguous sequence of objects in memory with a known length.
+  This is extremly useful to make sure that `iDynTree` classes are easy to use regardless of which
+  vector type the downstream code is using, for example if it is one of `std::vector<double>`,
+  `Eigen::VectorXd` or `yarp::sig::Vector` .
+
 #### `inverse-kinematics`
 
 * Frame Constraints can now be enabled and disabled dynamically ( https://github.com/robotology/idyntree/pull/389 ).
@@ -18,3 +26,7 @@ Important Changes
 * Addition of iDynTree::SchmittTrigger, iDynTree::ContactStateMachine and iDynTree::BipedFootContactClassifier classes for performing contact state detection using Schmitt trigger based thresholding and biped foot contact classification based on an alternate contact switching pattern reasoning over contact makes used for getting primary foot in contact
   (https://github.com/robotology/idyntree/pull/410 ,   https://github.com/robotology/idyntree/pull/411 ).
 * Addition of iDynTree::GravityCompensationHelpers class for computing gravity compensation torques using accelerometer measurements (https://github.com/robotology/idyntree/pull/438)
+
+#### `optimalcontrol`
+* Initial improvement of the optimal control library ( https://github.com/robotology/idyntree/pull/442 ). See the inline documentation of the classes for more details, or open an issue
+  ( https://github.com/robotology/idyntree/issues/new ) requesting documentation on some specific aspects of the optimal control library.
