Add release date to v0.8.2 release notes

--- a/doc/releases/v0_8_2.md
+++ b/doc/releases/v0_8_2.md
@@ -1,4 +1,4 @@
-iDynTree 0.8.2 (UNRELEASED)                                              {#v0_8_2}
+iDynTree 0.8.2 (2018-06-20)                                              {#v0_8_2}
 ========================
 
 [TOC]
