--- a/doc/releases/v0_10.md
+++ b/doc/releases/v0_10.md
@@ -1,4 +1,4 @@
-iDynTree 0.10 (UNRELEASED)                                              {#v0_10}
+iDynTree 0.10 (2018-06-20)                                              {#v0_10}
 ========================
 
 [TOC]
@@ -9,6 +9,12 @@ iDynTree 0.10 Release Notes
 
 Important Changes
 -----------------
+* Since 0.10 release, iDynTree uses C++14 in its headers, and requires GCC >= 5 and Visual Studio >= 2015
+  to compile.
+* Similar to the YARP policy, any new version of iDynTree will have a consecutive minor version number.
+  Development version (the one contained in the `devel` branch before release will be denoted with a
+  patch version number greater than 100. The next minor release of iDynTree will be 0.11 .
+
 
 #### `core`
 * Added the `iDynTree::Span` class (https://github.com/robotology/idyntree/pull/434), modeled after
