--- a/doc/releases/v0_11.md
+++ b/doc/releases/v0_11.md
@@ -9,6 +9,11 @@ iDynTree 0.11 Release Notes
 Important Changes
 -----------------
 
-
 #### `sensors`
 * The `iDynTree/Sensors/SixAxisFTSensor.h` header has been deprecated in favor of the  `iDynTree/Sensors/SixAxisForceTorqueSensor.h`.
+
+### `model_io`
+* Added dependency on [Gnome libxml2](http://xmlsoft.org), see next bullet point.
+* Added library `idyntree-modelio-xml` to parse generic XML files. Support for XSD validation (when parsing from file). This library requires [Gnome libxml2](http://xmlsoft.org).
+* Rewritten URDF parser to use the new `idyntree-modelio-xml` library.
+* Dropped required dependency on TinyXML1. If TinyXML is found in the system, it is possible to compile the old URDF parser that has been renamed into `idyntree-modelio-urdf-legacy`.
