--- a/doc/releases/v0_11.md
+++ b/doc/releases/v0_11.md
@@ -5,3 +5,10 @@ iDynTree 0.11 (UNRELEASED)                                              {#v0_11}
 
 iDynTree 0.11 Release Notes
 =========================
+
+Important Changes
+-----------------
+
+
+#### `sensors`
+* The `iDynTree/Sensors/SixAxisFTSensor.h` header has been deprecated in favor of the  `iDynTree/Sensors/SixAxisForceTorqueSensor.h`.
