--- a/doc/releases/v0_11.md
+++ b/doc/releases/v0_11.md
@@ -9,7 +9,10 @@ iDynTree 0.11 Release Notes
 Important Changes
 -----------------
 
-#### `sensors`
+### `core`
+* Improve SpatialInertia documentation ( https://github.com/robotology/idyntree/pull/435 ).
+
+### `sensors`
 * The `iDynTree/Sensors/SixAxisFTSensor.h` header has been deprecated in favor of the  `iDynTree/Sensors/SixAxisForceTorqueSensor.h`.
 
 #### `model_io`
