--- a/doc/releases/v0_11.md
+++ b/doc/releases/v0_11.md
@@ -9,7 +9,7 @@ iDynTree 0.11 Release Notes
 Summary
 -------
 * iDynTree now official supports the following compilers: Microsoft Visual Studio 2015/2017, GCC >= 5.3 and clang >= 3.8 .
-* The C++14 standard language is not used in the project, including in the public headers.
+* The C++14 standard language is now used in the project, including in the public headers.
 * [libxml2](http://xmlsoft.org) is now a required dependency. Check the docs to see how to install it.
 * A new URDF parser was implemented. A side effect of the new parser is that the serialization of the link and joints of models
   parsed from URDF may change. In your code, please use name string (in place of indeces) to idenfity joint and links, or use the
