--- a/doc/releases/v0_11.md
+++ b/doc/releases/v0_11.md
@@ -11,8 +11,8 @@ Summary
 * iDynTree now official supports the following compilers: Microsoft Visual Studio 2015/2017, GCC >= 5.3 and clang >= 3.8 .
 * The C++14 standard language is now used in the project, including in the public headers.
 * [libxml2](http://xmlsoft.org) is now a required dependency. Check the docs to see how to install it.
-* A new URDF parser was implemented. A side effect of the new parser is that the serialization of the link and joints of models
-  parsed from URDF may change. In your code, please use name string (in place of indeces) to idenfity joint and links, or use the
+* A new URDF parser was implemented. A side effect of the new parser is that the serialization of the links and joints of models
+  parsed from URDF may change. In your code, please use name string (in place of indices) to identify joints and links, or use the
   `iDynTree::ModelLoader` class to load a Model with the specified joint serialization.
 * CMake 3.5 is now required to build iDynTree.
 
