--- a/doc/releases/v0_11.md
+++ b/doc/releases/v0_11.md
@@ -1,4 +1,4 @@
-iDynTree 0.11 (UNRELEASED)                                              {#v0_11}
+iDynTree 0.11 (2018-08-31)                                              {#v0_11}
 ========================
 
 [TOC]
