[inverse-kinematics] Added method to return the convex hull of the constraint on the projection of the center of mass

--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -12,3 +12,7 @@ Summary
 
 Important Changes
 -----------------
+
+#### `inverse-kinematics`
+* Added method to return the convex hull of the constraint on the projection of the center of mass (https://github.com/robotology/idyntree/pull/478).
+
