--- a/doc/releases/v0_11_1.md
+++ b/doc/releases/v0_11_1.md
@@ -1,4 +1,4 @@
-iDynTree 0.11.1 (UNRELEASED)                                              {#v0_11_1}
+iDynTree 0.11.1 (2018-09-10)                                              {#v0_11_1}
 ========================
 
 [TOC]
@@ -9,4 +9,6 @@ iDynTree 0.11.1 Release Notes
 Bug Fixes
 ---------
 
-* Fixed a locale-dependent floating point parsing in the URDF parser (https://github.com/robotology/idyntree/pull/475). 
+* Fix a locale-dependent floating point parsing in the URDF parser (https://github.com/robotology/idyntree/pull/475).
+* Fix compatibility with SWIG 2 (https://github.com/robotology/idyntree/pull/476).
+* Fix behavior of InverseKinematics if Add***Constraint method are called multiple times (https://github.com/robotology/idyntree/pull/479).
