--- a/doc/main.dox
+++ b/doc/main.dox
@@ -83,6 +83,13 @@
  */
 
 
+ /**
+ * \defgroup iDynTreeDeprecated Deprecated functions and classes
+ *
+ * \warning The functions and classes in this component should not be used for new code.
+ *
+ */
+
 
 
 
@@ -120,6 +127,12 @@ some parts of it are activly developed and their interface can abroutly change b
 Until this components are ready to be integrated in a proper part of iDynTree, we keep them in the "experimental" part of iDynTree :
 
 \li  \ref iDynTreeExperimental "Experimental" : Experimental data structures and algorithms, whose interface is not guaranteed to be stable.
+
+iDynTree started as a tiny wrapper of code between [YARP](http://yarp.it/) and [KDL](https://github.com/orocos/orocos_kinematics_dynamics).
+For this reason, in the repository there is still some legacy code, that should not be used by users, as it is going to be removed from iDynTree.
+
+\li  \ref iDynTreeDeprecated "Deprecated" : Deprecated data structures and algorithms, that are going to be removed from iDynTree.
+
 
  *
  */
