--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -13,6 +13,10 @@ Summary
 Important Changes
 -----------------
 
+#### `high-level`
+* Added method to compute the inverse dynamics inertial parameters regressor in KinDynComputations ( https://github.com/robotology/idyntree/pull/480 ).
+KinDynComputations finally reached feature parity with respect to DynamicsComputations, that will finally be removed in one of the future iDynTree feature releases.
+
 #### `inverse-kinematics`
 * Added method to return the convex hull of the constraint on the projection of the center of mass (https://github.com/robotology/idyntree/pull/478).
 
