--- a/doc/releases/v0_11_2.md
+++ b/doc/releases/v0_11_2.md
@@ -6,5 +6,24 @@ iDynTree 0.11.2 (UNRELEASED)                                              {#v0_1
 iDynTree 0.11.2 Release Notes
 =========================
 
+All the changes in this patch release were introduced in Pull Request https://github.com/robotology/idyntree/pull/480 .
+
 Bug Fixes
 ---------
+* Fixed cache invalidation bug in the getFrameBiasAcc method of KinDynComputations. The internal
+  cache used by getBiasAcc was never updated even if the method setRobotState was called, so the
+  getFrameBiasAcc method always returned the bias acceleration corresponding to the first call to setRobotState.
+* Fixed getBiasAcc method in KinDynComputations to take into account the effect of non-zero and non-parallel
+  linear and angular base velocity, described in https://github.com/robotology/idyntree/issues/370 .
+
+New features
+------------
+* The getFrameAcc method that returns the acceleration of a frame was added to the KinDynComputations class.
+  As this method takes in input every time the robot acceleration, it is computationally expensive and
+  is not suitable to be used for multiple frames in a tight loop. If you need a computationally convenient
+  method to access frame accelerations, please open an issue.
+* It is now possible to specify a non-zero bias base acceleration as input of the ForwardBiasAccKinematics function.
+  This is convenient if the bias acceleration that is being computed is the bias acceleration obtained with the
+  MIXED velocity representation.
+
+
