--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -64,6 +64,7 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 ### `modelio`
 * Added `iDynTree::ModelExporter` class to export `iDynTree::Model` instances to URDF files (https://github.com/robotology/idyntree/pull/554).
 * Added support in the URDF parser to correctly parse the optional name parameter of visual and collision elements.
+* Updated `iDynTree::ModelLoader` class to load by default models with normalized joint ordering (https://github.com/robotology/idyntree/issues/491).
 
 ### `yarprobotstatepublisher`
 * Add `tf-prefix` and `jointstates-topic` options for the tf prefixes and ROS topic.
