Moved release notes to v0_12.md

--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -20,3 +20,9 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 #### `inverse-kinematics`
 * Added method to return the convex hull of the constraint on the projection of the center of mass (https://github.com/robotology/idyntree/pull/478).
 
+#### `optimalcontrol`
+* Added objects to deal with linear optimal control problems.
+* Added ``OSQP`` interface via ``osqp-eigen``.
+* Fixed bugs in ``MultipleShooting`` solver.
+* Added few lines of documentation.
+
