Updated release notes.

--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -26,3 +26,6 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 * Fixed bugs in ``MultipleShooting`` solver.
 * Added few lines of documentation.
 
+#### `visualization`
+* Added visualization of vectors.
+
