--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -8,7 +8,7 @@ iDynTree 0.12 Release Notes
 
 Summary
 -------
-* 
+*
 
 Important Changes
 -----------------
@@ -25,6 +25,7 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 * Added ``OSQP`` interface via ``osqp-eigen``.
 * Fixed bugs in ``MultipleShooting`` solver.
 * Added few lines of documentation.
+* Added interface for ``ALGLIB`` and ``WORHP``.
 
 #### `visualization`
 * Added visualization of vectors.
