Updated release notes.

--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -26,7 +26,7 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 * Fixed bugs in ``MultipleShooting`` solver.
 * Added few lines of documentation.
 * Added interface for ``ALGLIB`` and ``WORHP``.
+* Taking into account also the sparsity pattern of constraints and dynamical system.
 
 #### `visualization`
 * Added visualization of vectors.
-
