[estimation] update release docs

--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -30,3 +30,10 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 
 #### `visualization`
 * Added visualization of vectors.
+
+#### `estimation`
+* Added attitude estimator interface to estimate the orientation of an IMU, given the IMU measurements
+* Added `DiscreteExtendedKalmanFilterHelper` base class
+* Added `AttitudeMahonyFilter` implementation of an explicit formulation of passive complementary filter over quaternion groups
+* Added `AttitudeQuaternionEKF` implementation
+* All of the above addressed in the PR (https://github.com/robotology/idyntree/pull/516)
