--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -37,3 +37,5 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 * Added `AttitudeMahonyFilter` implementation of an explicit formulation of passive complementary filter over quaternion groups
 * Added `AttitudeQuaternionEKF` implementation
 * All of the above addressed in the PR (https://github.com/robotology/idyntree/pull/516)
+* Added `getWorldFrameTransform` implementation in `SimpleLeggedOdometry` class
+* Added a new version of `changeFixedFrame` in `SimpleLeggedOdometry`class. This can be used to set a desired homogeneous transformation for the fixed frame
