--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -37,3 +37,10 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 * Added `AttitudeMahonyFilter` implementation of an explicit formulation of passive complementary filter over quaternion groups
 * Added `AttitudeQuaternionEKF` implementation
 * All of the above addressed in the PR (https://github.com/robotology/idyntree/pull/516)
+* Added `bindings` for `AttitudeMahonyFilter`, `AttitudeQuaternionEKF`, `DiscreteExtendedKalmanFilterHelper` (https://github.com/robotology/idyntree/pull/522)
+* Added basic tests for the Attitude Estimator classes (https://github.com/robotology/idyntree/pull/522)
+
+### `core`
+* Fixed compatibility of `Span` with SWIG bindings compilation (https://github.com/robotology/idyntree/pull/522)
+* Added bindings for the class `Span` with the name `DynamicSpan` (https://github.com/robotology/idyntree/pull/522)
+* Added basic tests for `Span` (https://github.com/robotology/idyntree/pull/522)
