--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -42,6 +42,9 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 * Added `bindings` for `AttitudeMahonyFilter`, `AttitudeQuaternionEKF`, `DiscreteExtendedKalmanFilterHelper` (https://github.com/robotology/idyntree/pull/522)
 * Added basic tests for the Attitude Estimator classes (https://github.com/robotology/idyntree/pull/522)
 
+#### `bindings`
+* Added high-level Matlab/Octave wrappers of the iDyntree bindings. Related PR: (https://github.com/robotology/idyntree/pull/530)
+
 ### `core`
 * Fixed compatibility of `Span` with SWIG bindings compilation (https://github.com/robotology/idyntree/pull/522)
 * Added bindings for the class `Span` with the name `DynamicSpan` (https://github.com/robotology/idyntree/pull/522)
