--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -43,7 +43,7 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 * Added basic tests for the Attitude Estimator classes (https://github.com/robotology/idyntree/pull/522)
 
 #### `bindings`
-* Added high-level Matlab/Octave wrappers of the iDyntree bindings. Related PR: (https://github.com/robotology/idyntree/pull/530)
+* Added high-level Matlab/Octave wrappers of the iDyntree bindings (https://github.com/robotology/idyntree/pull/530)
 
 ### `core`
 * Fixed compatibility of `Span` with SWIG bindings compilation (https://github.com/robotology/idyntree/pull/522)
