Updated Release notes.

--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -26,7 +26,8 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 * Fixed bugs in ``MultipleShooting`` solver.
 * Added few lines of documentation.
 * Added interface for ``ALGLIB`` and ``WORHP``.
-* Taking into account also the sparsity pattern of constraints and dynamical system.
+* Multiple shooting solvers can use hessians of costs and constraints
+* Taking into account also the sparsity pattern of constraints and dynamical system (both in jacobians and hessians).
 
 #### `visualization`
 * Added visualization of vectors.
