update release note

--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -50,3 +50,6 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 * Fixed compatibility of `Span` with SWIG bindings compilation (https://github.com/robotology/idyntree/pull/522)
 * Added bindings for the class `Span` with the name `DynamicSpan` (https://github.com/robotology/idyntree/pull/522)
 * Added basic tests for `Span` (https://github.com/robotology/idyntree/pull/522)
+
+### `Model`
+* Implement `getTotalMass()` method for Model class
