--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -53,3 +53,7 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 
 ### `Model`
 * Implement `getTotalMass()` method for Model class
+
+### `yarprobotstatepublisher`
+* Add `tf-prefix` and `jointstates-topic` options for the tf prefixes and ROS topic.
+* `robot` option is deprecated, and replaced by `name-prefix`.
