[estimation][ExtendedKalmanFilter] add dynamic reset

--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -42,6 +42,7 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 * Added a new version of `changeFixedFrame` in `SimpleLeggedOdometry`class. This can be used to set a desired homogeneous transformation for the fixed frame
 * Added `bindings` for `AttitudeMahonyFilter`, `AttitudeQuaternionEKF`, `DiscreteExtendedKalmanFilterHelper` (https://github.com/robotology/idyntree/pull/522)
 * Added basic tests for the Attitude Estimator classes (https://github.com/robotology/idyntree/pull/522)
+* Added dynamic reset functionality to `DiscreteExtendedKalmanFilterHelper` class (https://github.com/robotology/idyntree/pull/553)
 
 #### `bindings`
 * Added high-level Matlab/Octave wrappers of the iDyntree bindings (https://github.com/robotology/idyntree/pull/530)
