Update v0_12 release doc with reduced-model parameter

--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -58,3 +58,4 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 ### `yarprobotstatepublisher`
 * Add `tf-prefix` and `jointstates-topic` options for the tf prefixes and ROS topic.
 * `robot` option is deprecated, and replaced by `name-prefix`.
+* Add `reduced-model` optional parameter to stream only the link transformations to transform server. By default, tranformations from all the frames are streamed to the transform server.
