--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -59,3 +59,6 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 * Add `tf-prefix` and `jointstates-topic` options for the tf prefixes and ROS topic.
 * `robot` option is deprecated, and replaced by `name-prefix`.
 * Add `reduced-model` optional parameter to stream only the link transformations to transform server. By default, tranformations from all the frames are streamed to the transform server.
+* Remove joint size check between model joints and joints in ROS topic given through `jointstates-topic` parameter.
+* Initialize the model joint positions values to zero and update the joint positions values in run time if the values are
+available in ROS topic given through `jointstates-topic` parameter.
