Fix bug https://github.com/robotology/idyntree/issues/497
Fix URDF parser bug for which collision geometeries were also loaded as visual geometries, and viceversa.
This behaviour was actually the combined effect given by two different bugs:
* All URDF geometries (collision and visual) were only parsed as visual geometries
* When building the iDynTree::Model, visual geometries were assigned both to visual and to collision

In this commit, test are also added to catch this kind of regressions.

--- a/doc/releases/v0_11_2.md
+++ b/doc/releases/v0_11_2.md
@@ -15,7 +15,8 @@ Bug Fixes
   getFrameBiasAcc method always returned the bias acceleration corresponding to the first call to setRobotState.
 * Fixed getBiasAcc method in KinDynComputations to take into account the effect of non-zero and non-parallel
   linear and angular base velocity, described in https://github.com/robotology/idyntree/issues/370 .
-* Fixed compilation on 32-bit Windows ( https://github.com/robotology/idyntree/pull/506 ).   
+* Fixed compilation on 32-bit Windows ( https://github.com/robotology/idyntree/pull/506 ).
+* Fixed a URDF parser regression introduced in iDynTree 0.11 in URDF parser for which collision geometeries were also loaded as visual geometries, and viceversa (https://github.com/robotology/idyntree/issues/497, https://github.com/robotology/idyntree/pull/559).
 
 New features
 ------------
