Add ModelCalibrationHelper class

--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -64,6 +64,7 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 ### `modelio`
 * Added `iDynTree::ModelExporter` class to export `iDynTree::Model` instances to URDF files (https://github.com/robotology/idyntree/pull/554).
 * Added support in the URDF parser to correctly parse the optional name parameter of visual and collision elements.
+* Added `iDynTree::ModelCalibrationHelper` to simplify loading a model from file, update its inertial parameters and exporting again to file (https://github.com/robotology/idyntree/pull/576).
 
 ### `yarprobotstatepublisher`
 * Add `tf-prefix` and `jointstates-topic` options for the tf prefixes and ROS topic.
