Add release notes and disable tests if IDYNTREE_USES_ASSIMP is False

--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -32,6 +32,16 @@ KinDynComputations finally reached feature parity with respect to DynamicsComput
 #### `visualization`
 * Added visualization of vectors.
 
+#### `solid-shapes`
+* Added a SolidShape helper library. This library is part of iDynTree, and is meant
+to contain all the algorithms that use in some form the visual and collision geometries of the model,
+and so they depend on the Assimp library to load meshes.
+* Added an helper function that provides rough estimates of the inertial parameters (mass, first moments of mass,
+3d inertia matrix elements) of a robot given the total mass of the robot, and its collisions shapes. While the estimates
+provided are quite rough, they can be quite useful at least to provide an expected order of magnitude of the parameters,
+to normalize errors or as initial points of a nonlinear optimization procedure.
+
+
 #### `estimation`
 * Added attitude estimator interface to estimate the orientation of an IMU, given the IMU measurements
 * Added `DiscreteExtendedKalmanFilterHelper` base class
