--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -54,6 +54,8 @@ to normalize errors or as initial points of a nonlinear optimization procedure.
 * Added basic tests for the Attitude Estimator classes (https://github.com/robotology/idyntree/pull/522)
 * Added `DiscreteKalmanFilterHelper` class for an implementation of a discrete, linear time-invariant Kalman Filter  (https://github.com/robotology/idyntree/pull/559)
 * Added dynamic reset functionality to `DiscreteExtendedKalmanFilterHelper` class (https://github.com/robotology/idyntree/pull/553)
+* Fixed missing `DOF_ACCELLERATION` data in dynamic variable cache ordering
+(https://github.com/robotology/idyntree/pull/587)
 
 #### `bindings`
 * Added high-level Matlab/Octave wrappers of the iDyntree bindings (https://github.com/robotology/idyntree/pull/530)
