--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -67,6 +67,8 @@ to normalize errors or as initial points of a nonlinear optimization procedure.
 * Fixed implementation of Transform::log() method (https://github.com/robotology/idyntree/pull/562)
 * Fixed implementation of SpatialMotionVector::exp() method (https://github.com/robotology/idyntree/pull/562)
 * Add nameIsValid attribute to iDynTree::SolidShape class.
+* Add operator[] method to `iDynTree::VectorDynSize` (https://github.com/robotology/idyntree/pull/596)
+* Add operator[] method to `iDynTree::VectorFixSize` (https://github.com/robotology/idyntree/pull/596)
 
 ### `Model`
 * Implement `getTotalMass()` method for Model class
