--- a/doc/releases/v0_11_2.md
+++ b/doc/releases/v0_11_2.md
@@ -1,4 +1,4 @@
-iDynTree 0.11.2 (UNRELEASED)                                              {#v0_11_2}
+iDynTree 0.11.2 (2019-12-12)                                              {#v0_11_2}
 ========================
 
 [TOC]
