Update the changelog

--- a/doc/releases/v0_12.md
+++ b/doc/releases/v0_12.md
@@ -74,6 +74,7 @@ to normalize errors or as initial points of a nonlinear optimization procedure.
 
 ### `Model`
 * Implement `getTotalMass()` method for Model class
+* Enable the installation of the `ModelTestUtils.h` file (https://github.com/robotology/idyntree/pull/607)
 
 ### `modelio`
 * Added `iDynTree::ModelExporter` class to export `iDynTree::Model` instances to URDF files (https://github.com/robotology/idyntree/pull/554).
