--- a/examples/python/MeshcatVisualizerExample.ipynb
+++ b/examples/python/MeshcatVisualizerExample.ipynb
@@ -9,7 +9,7 @@
     "The `idyntree.visualize.MeshcatVisualizer` is a simple class that permits to display `iDynTree::Model` instances  in Python, for example loaded from URDF models, directly  as part of a Jupyter Notebook, thanks to the use of the [MeshCat](https://github.com/rdeits/meshcat-python), a WebGL-based 3D visualizer for Python. The API of this class is inspired by [the similar class of Pinocchio](https://gepettoweb.laas.fr/doc/stack-of-tasks/pinocchio/devel/doxygen-html/md_doc_b-examples_display_b-meshcat-viewer.html), but the iDynTree version permit to specify arbitrary joint orders for the model.\n",
     "\n",
     "To run this example, you first need to install some dependencies. It is recommend to install them via `conda`. \n",
-    "If you do not have any conda distribution, it is recommended to install `mambaforge` by following the guide in [`robotology-superbuild` docs](https://github.com/robotology/robotology-superbuild/blob/v2022.11/doc/install-mambaforge.md). \n",
+    "If you do not have any conda distribution, it is recommended to install `mambaforge` by following the guide in [`robotology-superbuild` docs](https://github.com/robotology/robotology-superbuild/blob/v2022.11.0/doc/install-mambaforge.md). \n",
     "\n",
     "Once you have conda installed on your system, you can open a terminal and create on the fly an environment called `idyntree-jupyter` and activate it and then clone the idyntree repo:\n",
     "~~~\n",
